# FlappyBird

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp  makefile
src/: main.cpp  player.cpp
src/lib/: player.hpp
